fixed error message shifting the layout in newsletter component

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -439,6 +439,7 @@ b {
     }
 
     .__error-message {
+        height: 25px;
         margin: 0px;
         padding: 20px 0px 0px 0px;
         color: rgb(247, 19, 19);
